# cardscanner

./: .gitignore  README.md  api.py  apirequest.py  card_detector.py  card_finder.py  database.py  main.py  pyproject.toml  streamlitentry.py  utils.py
pages/: 1streamlitupload.py  2portfoliooverview.py  3book.py  4inventorymanager.py  portfoliooverview.py
