[project]
name = "pokemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
    "roboflow>=1.2.11",
    "ultralytics>=8.3.223",
    "torch",
    "torchvision",
    "ipynb>=0.5.1",
    "ipykernel>=7.1.0",
    "supervision>=0.26.1",
    "rfdetr>=1.3.0",
    "rapidocr>=3.4.2",
    "onnxruntime>=1.23.2",
    "numpy>=2.3.4",
    "rapidfuzz>=3.14.3",
    "fastapi>=0.121.3",
    "uvicorn>=0.38.0",
    "streamlit>=1.51.0",
]
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
